--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 
     <groupId>com.googlecode.wicketforge</groupId>
     <artifactId>wicketforge-annotations</artifactId>
-    <version>1.0</version>
+    <version>1.1-SNAPSHOT</version>
 
     <packaging>jar</packaging>
 
@@ -31,7 +31,7 @@
         <connection>scm:git:https://code.google.com/p/wicketforge.annotations/</connection>
         <developerConnection>scm:git:https://code.google.com/p/wicketforge.annotations/</developerConnection>
         <url>https://code.google.com/p/wicketforge/source/browse/?repo=annotations</url>
-      <tag>wicketforge-annotations-1.0</tag>
+      <tag>HEAD</tag>
   </scm>
 
     <developers>
